# mmcore-schema

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml  write_schema.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
schemas/mmconfig/1.0/: mmconfig.schema.json
src/mmcore_schema/: __init__.py  __main__.py  _mmconfig_schema.py  _schema.py  conversion.py  mmconfig.py  mmconfig.schema.json  pymmcore.py
tests/: conftest.py  test_cli.py  test_conversion.py  test_mmcore_schema.py  test_pymmcore.py
tests/configs/: ASI.cfg
